--- a/sample7-cit(1).html
+++ b/sample7-cit(1).html
@@ -49,7 +49,7 @@
 
         // テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();  
-        var texture = textureLoader.load("cit.png");
+        var texture = textureLoader.load("sima.jpg");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
 
